# DockerForge

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.html  nodemon.json  package-lock.json  package.json  tsconfig.dist.json  tsconfig.json
.github/workflows/: main.yml
assets/: index-02e0d5c5.js  index-251ec147.js  index-33878d52.js  index-5e3a144f.css  index-9c488004.js  index-e201b589.css  index-e4fd113f.js
npm/: README.md  package.json  tsconfig.json
npm/src/languages/: golang.ts  javascript.ts  python.ts  rust.ts
page/: bun.lockb  index.html  package.json  vite.config.ts
page/src/: App.css  App.tsx  main.tsx
page/src/components/: Codebox.tsx  Sidebar.tsx  Treeviewer.tsx
page/src/hooks/: useLanguage.ts
page/src/providers/: ForgeProvider.tsx  MenuProvider.tsx  SetupProvider.tsx
page/src/sections/: Forge.tsx  HowTo.tsx  Intro.tsx  Setup.tsx
page/src/templates/: index.ts
page/src/templates/golang/: basic.ts
page/src/templates/javascript/: basic.ts
page/src/templates/python/: basic.ts  index.ts
page/src/templates/rust/: basic.ts
page/src/templates/typescript/: basic.ts  elysia.ts  index.ts
src/: index.mts  index.ts  languages.rs  main.rs  utils.rs
src/languages/: golang.rs  index.ts  javascript.rs  python.rs  rust.rs  typescript.rs  typescript.ts
