[package]
name = "dockerforge"
authors = ["Doth-J"]
license = "Apache-2.0"
version = "1.0.0"
edition = "2021"

[build]
target-dir = "/npm/release"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
inquire = "0.7.2"
clap = { version = "4.5.3", features = ["derive"] }
spinners = "4.1.1"
